--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -95,7 +95,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_paperclip"
+                android:src="@drawable/outline_add_a_photo"
                 android:padding="12dp"
                 app:tint="@color/black" />
 
