--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="blue_secondary">#26E4FF</color>
     <color name="gray">#808080</color>
     <color name="gray_medium">#9E9E9E</color>
+    <color name="purple_blue">#673AB7</color>
 </resources>
