--- a/app/src/main/res/layout/dialog_add_answer.xml
+++ b/app/src/main/res/layout/dialog_add_answer.xml
@@ -53,6 +53,7 @@
         android:id="@+id/btn_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
         app:layout_constraintEnd_toEndOf="parent"
