--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -63,7 +63,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/ic_forum"
+                    android:src="@drawable/ic_notification"
                     app:tint="@color/black"
                     android:contentDescription="No new notifications" />
 
