--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -116,6 +116,7 @@
 
                     <!-- Answer stats items-->
                     <TextView
+                        android:id="@+id/tv_answer_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
