--- a/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/app/src/main/res/layout/fragment_profile_settings.xml
@@ -7,7 +7,7 @@
     android:background="#F5F5F5"
     tools:context=".ui.menu.ProfileSettingsFragment">
 
-    <com.google.android.material.appbar.MaterialToolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_profile_settings"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
