--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -4,7 +4,7 @@
     android:layout_width="60dp"
     android:layout_height="60dp"
     android:layout_margin="8dp"
-    android:src="@drawable/ic_launcher_foreground"
+    android:src="@drawable/ic_profile"
     android:scaleType="centerCrop"
     app:civ_border_width="2dp"
     app:civ_border_color="@color/gray"
